Issue #3851: Profile pictures not centered

--- a/app/assets/stylesheets/mobile.css.scss
+++ b/app/assets/stylesheets/mobile.css.scss
@@ -142,6 +142,12 @@ body {
   border-bottom: 1px solid #aaa;
 }
 
+.stream_element div.img img.avatar {
+  margin: 10px;
+}
+.stream_element .bd {
+  padding-top: 10px;
+}
 .photo_attachments {
   position: relative;
   left: 0;
@@ -660,13 +666,14 @@ display: inline-block;
 .message_count {
   border-radius: 2px 2px 2px 2px;
   float: right;
-  margin: 2px 2px 1px 5px;
+  margin: 10px 10px 1px 5px;
   padding: 0 2px 1px;
   position: relative;
   background-color: #999;
   color: #eee;
   font-size: 10px;
   line-height: 12px;
+
 }
 
 .conversation_participants img.avatar{
@@ -675,10 +682,15 @@ display: inline-block;
 	margin: 5px 0 5px 2px;
 }
 
+.conversations img.avatar{
+  margin: 10px;
+  float: left;
+}
+
 .unread_message_count {
   border-radius: 2px 2px 2px 2px;
   float: right;
-  margin: 2px 2px 1px 5px;
+  margin: 10px 2px 1px 5px;
   padding: 0 2px 1px;
   position: relative;
   background-color: #B11;
@@ -689,7 +701,7 @@ display: inline-block;
 
 .last_author {
   position: relative;
-  margin: 10px 5px 2px;
+  margin: 10px 10px 2px;
   float: right;
   font-size: 12px;
   color: #444;
